Entity Framework - Configuração

--- a/MVC_2022/appsettings.json
+++ b/MVC_2022/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESENV_04\\DESENV_04_2017; Initial Catalog=LanchesDataBase;Integrated Security=true;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
